--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
+*/checkpoint/*
+
 # IPython
 profile_default/
 ipython_config.py
@@ -256,3 +258,5 @@ dmypy.json
 .history
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode,jupyternotebooks
+/lms/E4-dog_cat_classifier/cat_vs_dog/checkpoint/
+/lms/E4-dog_cat_classifier/flower_classifier/checkpoint/
