git ignore edit

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
+.git-rewrite
+.idea
 
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
